--- a/index.css
+++ b/index.css
@@ -36,7 +36,6 @@ header {
   padding-left: 0.5rem;
 }
 
-
 .nav_links {
   text-align: center;
   list-style: none;
@@ -57,7 +56,7 @@ header {
   font-size: 20px;
   background-color: #808080;
   border-style: none;
-  border-radius: 5px;
+  border-radius: 40px;
   border-color: #fbbc05;
 }
 
@@ -65,20 +64,21 @@ header {
   color: #fbbc05;
   background-color: #2d2d2d;
 }
-
+/* this is my submit button */
 button {
   padding: 9px 25px;
   color: white;
   background-color: #1aa260;
   border: none;
-  border-radius: 50px;
+  border-radius: 40px;
   cursor: pointer;
   transition: all 0.3s ease 0s;
 }
 
+
 button:hover {
-  background-color: #fbbc05;
-  color: black;
+  background-color: #0b5d35;
+  color: white;
 }
 
 main {
@@ -116,10 +116,47 @@ ul {
   display: inline-block;
   border-style: none;
   color: white;
-  background-color: #db4437;
+  background-color: #cb7630;
   border-radius: 10px;
   margin: 1rem;
   padding: 15px;
+}
+
+#experience ul {
+  display: inline-block;
+  border-style: none;
+  color: white;
+  background-color: #cb7630;
+  border-radius: 10px;
+  margin: 1rem;
+  padding: 15px;
+  padding-right: 1rem;
+}
+
+#message-list,
+.list__item li {
+  border-style: none;
+  color: black;
+  background-color: whitesmoke;
+ 
+}
+
+.list__item{
+padding: .7rem;
+margin-bottom: 2rem;
+border-style: none;
+background-color: #b9d2fa;
+border-radius: 10px;
+}
+
+#message-list button{
+  margin-top: 1rem;
+  background-color: #db4437;
+}
+
+#message-list button:hover{
+  background-color: #a12b20;
+  color: white;
 }
 
 #name,
@@ -149,11 +186,31 @@ ul {
 }
 
 #footer {
+  display: flex;
+  flex-direction:column;
+  justify-content:center;
   margin-top: 2rem;
-  text-align: center;
   padding: 1rem;
   background-color: #fbbc05;
 }
+
+#footer p{
+  text-align: center;
+}
+
+ion-icon {
+  font-size: 32px;
+}
+
+
+#git_button{
+  color: black;
+  padding: 0;
+  background-color: #fbbc05;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
 
 #label {
   font-weight: bold;
